--- a/public/css/demo.css
+++ b/public/css/demo.css
@@ -11,7 +11,9 @@ html, body {
   background-color: #3F484F;
 }
 
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand,
+.navbar-default .navbar-brand:focus,
+.navbar-default .navbar-brand:hover {
   color: #E7E7E7;
   font-weight: bold;
 }
